tests/baselines/reference/reactNamespaceMissingDeclaration(strict=true).errors.txt
reactNamespaceMissingDeclaration.tsx(2,1): error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
reactNamespaceMissingDeclaration.tsx(2,2): error TS2304: Cannot find name 'myReactLib'.


==== reactNamespaceMissingDeclaration.tsx (2 errors) ====
    // Error myReactLib not declared
    <foo data/>
    ~~~~~~~~~~~
!!! error TS7026: JSX element implicitly has type 'any' because no interface 'JSX.IntrinsicElements' exists.
     ~~~
!!! error TS2304: Cannot find name 'myReactLib'.